--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,138 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<GridLayout
+    android:id="@+id/gridLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bghomemobileappblurcolwhite"
+    android:columnCount="2"
+    android:columnOrderPreserved="true"
+    android:padding="10dp"
+    android:rowOrderPreserved="true">
+
+
+    <!--android:layout_marginTop="50dp"-->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/bghomemobileappblurcolwhite"
-        android:columnCount="2"
-        android:columnOrderPreserved="true"
-        android:padding="10dp"
-        android:rowOrderPreserved="true">
+        android:layout_height="200dp"
+        android:layout_columnSpan="2"
+        android:background="@drawable/drawable" />
 
-        <!--android:layout_marginTop="50dp"-->
-        <TextView
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="0"
+        android:layout_row="3"
+        android:background="@drawable/foodestablishment" />
+
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="bottom|center"
+        android:layout_row="3"
+        android:width="206dp"
+        android:height="30dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="Food Establishments"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/reportIssuesId"
+        android:layout_column="1"
+        android:layout_row="3"
+        android:background="@drawable/reportissues"
+        android:onClick="startReportIssueActivity" />
+
+    <TextView
+        android:layout_column="1"
+        android:layout_gravity="bottom|center"
+        android:layout_row="3"
+        android:width="207dp"
+        android:height="30dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="Report Issues"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_column="1"
+        android:layout_marginTop="3dp"
+        android:layout_row="4"
+        android:background="@drawable/shelterservices"
+        android:onClick="startAnimalServicesActivity" />
+
+    <TextView
+        android:layout_column="1"
+        android:layout_gravity="bottom|center"
+        android:layout_row="4"
+        android:width="207dp"
+        android:height="30dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="Animal Services"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_column="1"
+        android:layout_marginTop="3dp"
+        android:layout_row="5"
+        android:background="@drawable/mc" />
+
+    <TextView
+        android:layout_column="1"
+        android:layout_gravity="bottom|center"
+        android:layout_row="5"
+        android:width="207dp"
+        android:height="30dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="Mosquito Concerns"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_column="0"
+        android:layout_marginTop="3dp"
+        android:layout_row="5"
+        android:background="@drawable/preparednessresponse" />
+
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="bottom|center"
+        android:layout_row="5"
+        android:width="207dp"
+        android:height="30dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="Preparedness &amp; Response"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_column="0"
+        android:layout_marginTop="3dp"
+        android:layout_row="4"
+        android:background="@drawable/healthwellness" />
+
+    <TextView
+        android:layout_column="0"
+        android:layout_gravity="bottom|center"
+        android:layout_row="4"
+        android:width="207dp"
+        android:height="30dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="Health &amp; Wellness"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
+        android:textStyle="bold" />
+
+</GridLayout>
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!-- The main content view -->
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:layout_columnSpan="2"
-            android:background="@drawable/drawable" />
+            android:layout_height="match_parent" />
+        <!-- The navigation drawer -->
+        <ListView android:id="@+id/left_drawer"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:background="#000"/>
+    </android.support.v4.widget.DrawerLayout>
 
-        <TextView
-            android:layout_column="0"
-            android:layout_row="3"
-            android:background="@drawable/foodestablishment"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
-
-        <TextView
-            android:layout_column="0"
-            android:layout_gravity="bottom|center"
-            android:layout_row="3"
-            android:width="206dp"
-            android:height="30dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="Food Establishments"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/reportIssuesId"
-            android:layout_column="1"
-            android:layout_row="3"
-            android:background="@drawable/reportissues"
-            android:onClick="startReportIssueActivity"/>
-
-        <TextView
-            android:layout_column="1"
-            android:layout_gravity="bottom|center"
-            android:layout_row="3"
-            android:width="207dp"
-            android:height="30dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="Report Issues"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_column="1"
-            android:layout_marginTop="3dp"
-            android:layout_row="4"
-            android:background="@drawable/shelterservices"
-            android:onClick="startAnimalServicesActivity"/>
-
-        <TextView
-            android:layout_column="1"
-            android:layout_gravity="bottom|center"
-            android:layout_row="4"
-            android:width="207dp"
-            android:height="30dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="Animal Services"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_column="1"
-            android:layout_marginTop="3dp"
-            android:layout_row="5"
-            android:background="@drawable/mc" />
-
-        <TextView
-            android:layout_column="1"
-            android:layout_gravity="bottom|center"
-            android:layout_row="5"
-            android:width="207dp"
-            android:height="30dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="Mosquito Concerns"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_column="0"
-            android:layout_marginTop="3dp"
-            android:layout_row="5"
-            android:background="@drawable/preparednessresponse" />
-
-        <TextView
-            android:layout_column="0"
-            android:layout_gravity="bottom|center"
-            android:layout_row="5"
-            android:width="207dp"
-            android:height="30dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="Preparedness &amp; Response"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_column="0"
-            android:layout_marginTop="3dp"
-            android:layout_row="4"
-            android:background="@drawable/healthwellness" />
-
-        <TextView
-            android:layout_column="0"
-            android:layout_gravity="bottom|center"
-            android:layout_row="4"
-            android:width="207dp"
-            android:height="30dp"
-            android:background="@android:color/white"
-            android:gravity="center"
-            android:text="Health &amp; Wellness"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12dp"
-            android:textStyle="bold" />
-
-
-    </GridLayout>
+</LinearLayout>
